--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,4 +1,8 @@
 .status-bar {
+  background-color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 5px 3px;
