--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -9,7 +9,8 @@
 }
 
 .more-suggestions__icons {
-  display: flex;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
 }
 
 .more-suggestions__icon {
@@ -25,4 +26,12 @@
   border-radius: 10px;
   border: 3px solid #0ae6c1;
   margin-bottom: 10px;
+}
+
+.more-suggestions__icon-text {
+  text-align: center;
+}
+
+.more-icons {
+  margin-top: 40px;
 }
